--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Hello World! I am Peter Panda</h1>
+    <h1>Hello World! I am Peter Panda.</h1>
 
     <div class="pandacolumn">
       <img src="img/pandabanner.jpg" alt="Picture of a large panda eating bamboo." class="center">
